# SDiZO_projekt4

./: CMakeLists.txt
OperationsOnStructures/Queue/: QueueOperations.cpp
StreamHandliing/: Streams.cpp  Streams.h
Structures/Queue/: Queue.cpp  Queue.h
Structures/Stack/: Stack.cpp  Stack.h
